@@ -39,6 +39,8 @@ Commands:
  * @clone can take a garbage dbref for the new object, the same as @create.
    Suggested by Dan. [MG]
  * 'look' now supports more english-matching (look this foo's 1st bar). [MG]
+ * You can now look at objects on the other side of transparent exits, with
+   "look [toward] <exit>'s <object>". Suggested by Trinsec. [MG]
    
 Functions:
  * Added strfirstof() and strallof(), which return the first arg/all args
